# electron/daemon-go-types.generated.ts
@@ -762,6 +762,38 @@ export interface paths {
     patch?: never;
     trace?: never;
   };
+  "/wallpaper/history/previous": {
+    parameters: {
+      query?: never;
+      header?: never;
+      path?: never;
+      cookie?: never;
+    };
+    get?: never;
+    put?: never;
+    post: operations["previousWallpaper"];
+    delete?: never;
+    options?: never;
+    head?: never;
+    patch?: never;
+    trace?: never;
+  };
+  "/wallpaper/history/next": {
+    parameters: {
+      query?: never;
+      header?: never;
+      path?: never;
+      cookie?: never;
+    };
+    get?: never;
+    put?: never;
+    post: operations["nextWallpaper"];
+    delete?: never;
+    options?: never;
+    head?: never;
+    patch?: never;
+    trace?: never;
+  };
 }
 export type webhooks = Record<string, never>;
 export interface components {
@@ -2322,6 +2354,44 @@ export interface operations {
         };
         content: {
           "application/json": components["schemas"]["RandomWallpaperResponse"];
+        };
+      };
+    };
+  };
+  previousWallpaper: {
+    parameters: {
+      query?: never;
+      header?: never;
+      path?: never;
+      cookie?: never;
+    };
+    requestBody?: never;
+    responses: {
+      200: {
+        headers: {
+          [name: string]: unknown;
+        };
+        content: {
+          "application/json": components["schemas"]["SetWallpaperResponse"];
+        };
+      };
+    };
+  };
+  nextWallpaper: {
+    parameters: {
+      query?: never;
+      header?: never;
+      path?: never;
+      cookie?: never;
+    };
+    requestBody?: never;
+    responses: {
+      200: {
+        headers: {
+          [name: string]: unknown;
+        };
+        content: {
+          "application/json": components["schemas"]["SetWallpaperResponse"];
         };
       };
     };
